--- a/index.html
+++ b/index.html
@@ -6,20 +6,114 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywards" content="여행,투어,travel,tour">
     <meta name="description" content="여행,투어,travel,tour">
+
     <!-- 오픈그래픽 -->
     <meta property="og:image" content="./images/og-img.jpg">
     <meta property="og:url" content="https://jeoneunseo.github.io/travel">
     <meta property="og:title" content="나를 위한 선물 - 여행">
     <meta property="og:description" content="전세계 어디든 마음만 먹으면 갈 수 있습니다. 당신의 여행파트너...">
 
-
-
-
+    <!-- 트위터카드 -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:image" content="./images/og-img.jpg">
+    <meta name="twitter:url" content="https://jeoneunseo.github.io/travel">
+    <meta name="twitter:title" content="나를 위한 선물 - 여행">
+    <meta name="twitter:description" content="전세계 어디든 마음만 먹으면 갈 수 있습니다. 당신의 여행파트너...">
+    <!-- reset -->
+    <link rel="stylesheet" href="./css/reset.css">
     <!-- favicon -->
     <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
+    <!-- 라이브러리/플러그인 -->
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- bxslider -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.15/jquery.bxslider.css" integrity="sha512-rV4fiystTwIvs71MLqeLbKbzosmgDS7VU5Xqk1IwFitAM+Aa9x/8Xil4CW+9DjOvVle2iqg4Ncagsbgu2MWxKQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.15/jquery.bxslider.min.js" integrity="sha512-p55Bpm5gf7tvTsmkwyszUe4oVMwxJMoff7Jq3J/oHaBk+tNQvDKNz9/gLxn9vyCjgd6SAoqLnL13fnuZzCYAUA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- smoothScroll -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-smooth-scroll/2.2.0/jquery.smooth-scroll.min.js" integrity="sha512-0tWfLL+YANip9Uo2YUY4/SxvwDgPUuoSUcIXPFULXiXXgLKmiC/qCeDxnhl+mLobu6e/dSlyhGheCtzd9+RLCw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <title>나를 위한 선물 - 여행</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+        :root{
+            font-family:'Roboto','Noto Sans KR',sans-serif;
+            font-weight:300;
+            font-size:14px;
+            line-height:24px;
+            color:#444;
+        }
+        .sm-tit{
+            font-weight:700;
+            font-size:18px;
+        }
+    </style>
+    <script></script>
 </head>
 <body>
-    
+    <section class="wrap">
+        <header class="header">
+            <div class="container">
+                <div class="inner">
+                    <h1 class="logo">
+                        <a href="./index.html">
+                            <span>TRAVEL TOUR</span>
+                            <span>KOREA NUMBER 1 TOUR</span>
+                        </a>
+                    </h1>
+                    <div class="btn-nav">
+                        <div class="line">라인1</div>
+                        <div class="line">라인2</div>
+                        <div class="line">라인3</div>
+                    </div>
+                    <nav class="nav">
+                        <ul class="member">
+                            <li><a href="#">로그인</a></li>
+                            <li><a href="#">회원가입</a></li>
+                        </ul>
+                        <ul class="nav-list">
+                            <li>
+                                <a href="#">
+                                    <div class="img-box">
+                                        <img src="./images/ico-info.svg" alt="여행정보">
+                                    </div>
+                                    <span>여행정보</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <div class="img-box">
+                                        <img src="./images/ico-phone.svg" alt="고객센터">
+                                    </div>
+                                    <span>고객센터</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <div class="img-box">
+                                        <img src="./images/ico-car.svg" alt="상품투어">
+                                    </div>
+                                    <span>상품투어</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <div class="img-box">
+                                        <img src="./images/ico-ticket.svg" alt="티켓/가이드">
+                                    </div>
+                                    <span>티켓/가이드</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+
+                </div>
+            </div>
+        </header>
+        <section class="slider"></section>
+        <section class="section"></section>
+        <section class="line"></section>
+        <section class="notice"></section>
+        <footer class="footer"></footer>
+    </section>
 </body>
 </html>
