--- a/index.html
+++ b/index.html
@@ -31,25 +31,33 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.15/jquery.bxslider.min.js" integrity="sha512-p55Bpm5gf7tvTsmkwyszUe4oVMwxJMoff7Jq3J/oHaBk+tNQvDKNz9/gLxn9vyCjgd6SAoqLnL13fnuZzCYAUA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- smoothScroll -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-smooth-scroll/2.2.0/jquery.smooth-scroll.min.js" integrity="sha512-0tWfLL+YANip9Uo2YUY4/SxvwDgPUuoSUcIXPFULXiXXgLKmiC/qCeDxnhl+mLobu6e/dSlyhGheCtzd9+RLCw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
+    <!-- fontAwesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./default.css">
     <title>나를 위한 선물 - 여행</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-        :root{
-            font-family:'Roboto','Noto Sans KR',sans-serif;
-            font-weight:300;
-            font-size:14px;
-            line-height:24px;
-            color:#444;
+
+    <script>
+        window.onload=function(){
+            let btnNav = document.getElementById('btn-nav');
+            btnNav.addEventListener('click',function(){
+                let _header = document.querySelector('.header');
+                let _nav = document.querySelector('.nav');
+                _header.classList.toggle('show-nav');
+                _nav.classList.toggle('show-nav');
+            })
         }
-        .sm-tit{
-            font-weight:700;
-            font-size:18px;
-        }
-    </style>
-    <script></script>
+        // $(function(){
+        //     $('#btn-nav').on({
+        //         'click':function(){
+        //             $('.header,.nav').toggleClass('show-nav');                    
+        //         },
+        //     });
+        // })
+    </script>
 </head>
 <body>
+    <a class="skip-menu" href="#main">본문 바로가기</a>
+
     <section class="wrap">
         <header class="header">
             <div class="container">
@@ -60,47 +68,35 @@
                             <span>KOREA NUMBER 1 TOUR</span>
                         </a>
                     </h1>
-                    <div class="btn-nav">
+                    <div class="btn-nav" id="btn-nav">
                         <div class="line">라인1</div>
                         <div class="line">라인2</div>
                         <div class="line">라인3</div>
                     </div>
                     <nav class="nav">
-                        <ul class="member">
+                        <ul class="member clearfix">
                             <li><a href="#">로그인</a></li>
                             <li><a href="#">회원가입</a></li>
                         </ul>
                         <ul class="nav-list">
-                            <li>
+                            <li class="bd-bt bd-rt">
                                 <a href="#">
-                                    <div class="img-box">
-                                        <img src="./images/ico-info.svg" alt="여행정보">
-                                    </div>
-                                    <span>여행정보</span>
+                                    <i class="fas fa-info"></i>여행정보
+                                </a>
+                            </li>
+                            <li class="bd-bt">
+                                <a href="#">
+                                    <i class="fas fa-phone"></i>고객센터
+                                </a>
+                            </li>
+                            <li class="bd-rt">
+                                <a href="#">
+                                    <i class="fas fa-car"></i>상품투어
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    <div class="img-box">
-                                        <img src="./images/ico-phone.svg" alt="고객센터">
-                                    </div>
-                                    <span>고객센터</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <div class="img-box">
-                                        <img src="./images/ico-car.svg" alt="상품투어">
-                                    </div>
-                                    <span>상품투어</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <div class="img-box">
-                                        <img src="./images/ico-ticket.svg" alt="티켓/가이드">
-                                    </div>
-                                    <span>티켓/가이드</span>
+                                    <i class="fas fa-ticket-alt"></i>티켓/가이드
                                 </a>
                             </li>
                         </ul>
@@ -110,10 +106,14 @@
             </div>
         </header>
         <section class="slider"></section>
-        <section class="section"></section>
+        <section class="section" id="main"></section>
         <section class="line"></section>
         <section class="notice"></section>
         <footer class="footer"></footer>
+
+        <script>
+
+        </script>
     </section>
 </body>
 </html>
