--- a/index.html
+++ b/index.html
@@ -76,6 +76,13 @@
             text-align:center;
             line-height:24px;
         }
+
+        .line{
+            height:1px;
+            margin-bottom:27px;
+            background-color:#444;
+            
+        }
     </style>
     <script>
         $(function(){
@@ -90,7 +97,7 @@
     <a class="skip-menu" href="#main">본문 바로가기</a>
 
     <section class="wrap">
-        <header class="header">
+        <header class="header" id="header">
             <div class="container">
                 <div class="inner">
                     <h1 class="logo">
@@ -167,8 +174,40 @@
             </div>
         </section>
         <section class="line"></section>
-        <section class="notice"></section>
-        <footer class="footer"></footer>
+        <section class="notice">
+            <div class="container">
+                <h2 class="sm-tit">공지사항</h2>
+                <ul class="notice-list">
+                    <li><a href="#">· 항공 앱 & 호텔 앱 서비스 통합 안내</a></li>
+                    <li><a href="#">· 오미크론 변이 관련 취소료 규정 변경 공지</a></li>
+                    <li><a href="#">· 투어/입장권 시스템 점검에 따른 이용제한 안내</a></li>
+                    <li><a href="#">· 아에로멕시코(AM) 미 파산 법원 청구 증명 신청에 대한 수수료 및 즉시 발급안내</a></li>
+                </ul>
+            </div>
+        </section>
+        <footer class="footer">
+            <div class="container">
+                <strong><a href="#">이용약관</a><a href="#">개인정보처리방침</a></strong>
+                <address>
+                    투어리스트 트레벌
+                    <br>
+                    인천광역시 서구 연희동 연후희로 1-1
+                    <br>
+                    E-mail : pam7461@gmail.com
+                    <br>
+                    만든이 : 홍길동
+                </address>
+                <div class="sns">
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                    <a href="#"><i class="fab fa-instagram-square"></i></a>
+                    <a href="#"><i class="fab fa-twitter-square"></i></a>
+                </div>
+                <div class="move-top">
+                    <a href="#header"><i class="fas fa-arrow-up"></i></a>
+                </div>
+            </div>
+        </footer>
 
     </section>
 </body>
